# PhK-BattleServer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: codex-auto-merge.yml  protocol-audit.yml
apps/phk_battle_server/: main.cpp
dev/: progress.md
docs/: architecture.md
include/phk/battle/: handshake.hpp  kcp_endpoint.hpp  protocol.hpp  result.hpp  server.hpp  simulation.hpp  ticket.hpp  version.hpp
src/: handshake.cpp  kcp_endpoint.cpp  protocol.cpp  result.cpp  server.cpp  simulation.cpp  ticket.cpp
tests/: battle_server_tests.cpp
tools/: check_battle_server.py
